# clickhouse-kit

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.changeset/: nullable-json-columns.md  postgres-kit-parity-tszod.md  safety-core.md  v0.2-flexible-multitenant.md
.github/workflows/: pr-checks.yml  publish-crate.yml  release.yml  rust.yml
crates/clickhouse-kit/: Cargo.toml  README.md
crates/clickhouse-kit/src/: client.rs  codegen.rs  drift.rs  evolve.rs  flatten.rs  flexible.rs  introspect.rs  lib.rs  migrate.rs  safety.rs  table.rs
crates/clickhouse-kit/tests/: integration.rs  integration_bridge.rs  integration_io.rs
src/: check.ts  evolve.ts  flatten.ts  flexible.ts  generate.ts  index.ts  kit.ts  migrate.ts  runtime.ts  safety.ts
src/__tests__/: check.test.ts  evolve.test.ts  fixtures.ts  flatten.test.ts  flexible.test.ts  kit.test.ts  migrate.test.ts  runtime.test.ts  safety.test.ts
