[package]
name = "smooai-clickhouse-kit"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Safe-by-construction ClickHouse schema toolkit: an allowlisted type system for user-defined / multi-tenant schemas, DDL generation, forward-only migrations, and drift detection. Rows stay Serde-native."
documentation = "https://docs.rs/smooai-clickhouse-kit"
repository = "https://github.com/SmooAI/clickhouse-kit"
homepage = "https://github.com/SmooAI/clickhouse-kit"
readme = "README.md"
keywords = ["clickhouse", "schema", "migrations", "multi-tenant", "olap"]
categories = ["database", "data-structures"]

# The package is `smooai-clickhouse-kit` (we're always smooai-scoped), but the
# library imports as `clickhouse_kit` for ergonomics: `use clickhouse_kit::...`.
[lib]
name = "clickhouse_kit"
path = "src/lib.rs"

[features]
# TS + Zod code emit from a `TableSpec` (see `src/codegen.rs`) — for schema/consumer
# parity with postgres-kit. Off by default; pulls in no extra dependencies.
codegen = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
clickhouse = "0.15.1"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["clickhouse"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
